--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Library</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Karla:wght@600;700&family=Open+Sans:wght@300;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -17,7 +17,18 @@
     <section>
         <button class="section_btn">Add</button>
     </section>
-    <div></div>
+    <div class="input_book">
+        <form>
+            <label for="title">Title:</label>
+            <input type="text" name="title">
+            <label for="author">Author:</label>
+            <input type="text" name="author">
+            <label for="pages">Pages:</label>
+            <input type="text" name="pages">
+            <label for="checkbox">Have you read it?</label>
+            <input type="checkbox" name="checkbox" id="checkbox">
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
