--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         <button class="section_btn">Add</button>
     </section>
     <div class="input_book">
-        <form>
+        <form class="book-data">
             <label for="title">Title:</label>
-            <input type="text" name="title">
+            <input type="text" name="title" id="title">
             <label for="author">Author:</label>
-            <input type="text" name="author">
+            <input type="text" name="author" id="author">
             <label for="pages">Pages:</label>
-            <input type="text" name="pages">
+            <input type="text" name="pages" id="pages">
             <label for="checkbox">Have you read it?</label>
             <input type="checkbox" name="checkbox" id="checkbox">
+            <button id="submit-data">Add To Library</button>
         </form>
     </div>
     <script src="script.js"></script>
