--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
 </head>
 <body>
     <header class="header">
-        <h1>My Library</h1>
+        <h1>Library</h1>
     </header>
     <section>
         <button class="section_btn">Add</button>
     </section>
-    <div class="input_book">
-        <form class="book-data">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title">
-            <label for="author">Author:</label>
-            <input type="text" name="author" id="author">
-            <label for="pages">Pages:</label>
-            <input type="text" name="pages" id="pages">
-            <label for="checkbox">Have you read it?</label>
-            <input type="checkbox" name="checkbox" id="checkbox">
-            <button id="submit-data">Add To Library</button>
-        </form>
-    </div>
+    <section class="modal-container">
+        <div class="input_book">
+            <form class="book-data">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title" required>
+                <label for="author">Author:</label>
+                <input type="text" name="author" id="author" required>
+                <label for="pages">Pages:</label>
+                <input type="text" name="pages" id="pages" required>
+                <label for="checkbox">Have you read it?</label>
+                <input type="checkbox" name="checkbox" id="checkbox">
+                <button id="submit-data">Add To Library</button>
+            </form>
+        </div>
+    </section>
+    <section class="book-ele"></section>
     <script src="script.js"></script>
 </body>
 </html>
