--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <section class="modal-container">
         <div class="input_book">
             <form class="book-data">
+                <button id="close-modal">X</button>
                 <label for="title">Title:</label>
                 <input type="text" name="title" id="title" required>
                 <label for="author">Author:</label>
